[package]
name = "kvm"
version = "0.2.0"
authors = ["Dan Schatzberg <schatzberg.dan@gmail.com>"]
repository = "https://github.com/dschatzberg/kvm.git"
homepage = "https://github.com/dschatzberg/kvm"
description = "Bindings for KVM interface"
keywords = ["kvm", "virtualization"]
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"

[dependencies]
errno = "0.2.4"
libc = "0.2"
log = "0.3"
memmap = "0.7.0"

[build-dependencies]
cc = "1.0.50"
